// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`correctly applies "inputAttrs" property to the Radio component 1`] = `
<InjectIntl(RadioField)
  intl={
    Object {
      "defaultFormats": Object {},
      "defaultLocale": "en",
      "formatDate": [Function],
      "formatHTMLMessage": [Function],
      "formatMessage": [Function],
      "formatNumber": [Function],
      "formatPlural": [Function],
      "formatRelative": [Function],
      "formatTime": [Function],
      "formats": Object {},
      "formatters": Object {
        "getDateTimeFormat": [Function],
        "getMessageFormat": [Function],
        "getNumberFormat": [Function],
        "getPluralFormat": [Function],
        "getRelativeFormat": [Function],
      },
      "locale": "en",
      "messages": null,
      "now": [Function],
      "onError": [Function],
      "textComponent": "span",
      "timeZone": null,
    }
  }
  legend="Default RadioField"
>
  <RadioField
    error={null}
    help={null}
    hideRequired={false}
    intl={
      Object {
        "defaultFormats": Object {},
        "defaultLocale": "en",
        "formatDate": [Function],
        "formatHTMLMessage": [Function],
        "formatMessage": [Function],
        "formatNumber": [Function],
        "formatPlural": [Function],
        "formatRelative": [Function],
        "formatTime": [Function],
        "formats": Object {},
        "formatters": Object {
          "getDateTimeFormat": [Function],
          "getMessageFormat": [Function],
          "getNumberFormat": [Function],
          "getPluralFormat": [Function],
          "getRelativeFormat": [Function],
        },
        "locale": "en",
        "messages": null,
        "now": [Function],
        "onError": [Function],
        "textComponent": "span",
        "timeZone": null,
      }
    }
    isInline={false}
    isInvalid={false}
    isLegendHidden={false}
    legend="Default RadioField"
    legendAttrs={Object {}}
    required={false}
    showOptional={false}
  >
    <fieldset
      className="radio-field"
      required={false}
    >
      <legend
        className="legend-group"
        id="terra-radio-field-description-2"
      >
        <div
          className="legend"
        >
          Default RadioField
          <span
            className="error-icon-hidden"
          />
        </div>
      </legend>
      <Radio
        disabled={false}
        inputAttrs={
          Object {
            "aria-describedby": "terra-radio-field-description-2  ",
            "data-custom-attr": "attr data",
          }
        }
        isInline={false}
        isLabelHidden={false}
        key=".0"
        labelText="Default label"
        labelTextAttrs={Object {}}
        name={null}
      >
        <div
          className="radio"
        >
          <label
            className="label"
          >
            <input
              aria-describedby="terra-radio-field-description-2  "
              className="native-input"
              data-custom-attr="attr data"
              disabled={false}
              name={null}
              type="radio"
            />
            <span
              className="outer-ring"
            >
              <span
                className="inner-ring"
              />
            </span>
            <span
              className="label-text"
            >
              Default label
            </span>
          </label>
        </div>
      </Radio>
    </fieldset>
  </RadioField>
</InjectIntl(RadioField)>
`;

exports[`correctly applies the theme context className 1`] = `
<ThemeContextProvider
  intl={
    Object {
      "defaultFormats": Object {},
      "defaultLocale": "en",
      "formatDate": [Function],
      "formatHTMLMessage": [Function],
      "formatMessage": [Function],
      "formatNumber": [Function],
      "formatPlural": [Function],
      "formatRelative": [Function],
      "formatTime": [Function],
      "formats": Object {},
      "formatters": Object {
        "getDateTimeFormat": [Function],
        "getMessageFormat": [Function],
        "getNumberFormat": [Function],
        "getPluralFormat": [Function],
        "getRelativeFormat": [Function],
      },
      "locale": "en",
      "messages": null,
      "now": [Function],
      "onError": [Function],
      "textComponent": "span",
      "timeZone": null,
    }
  }
  theme={
    Object {
      "className": "orion-fusion-theme",
    }
  }
>
  <InjectIntl(RadioField)
    legend="Default RadioField"
  >
    <RadioField
      error={null}
      help={null}
      hideRequired={false}
      intl={
        Object {
          "defaultFormats": Object {},
          "defaultLocale": "en",
          "formatDate": [Function],
          "formatHTMLMessage": [Function],
          "formatMessage": [Function],
          "formatNumber": [Function],
          "formatPlural": [Function],
          "formatRelative": [Function],
          "formatTime": [Function],
          "formats": Object {},
          "formatters": Object {
            "getDateTimeFormat": [Function],
            "getMessageFormat": [Function],
            "getNumberFormat": [Function],
            "getPluralFormat": [Function],
            "getRelativeFormat": [Function],
          },
          "locale": "en",
          "messages": null,
          "now": [Function],
          "onError": [Function],
          "textComponent": "span",
          "timeZone": null,
        }
      }
      isInline={false}
      isInvalid={false}
      isLegendHidden={false}
      legend="Default RadioField"
      legendAttrs={Object {}}
      required={false}
      showOptional={false}
    >
      <fieldset
        className="radio-field orion-fusion-theme"
        required={false}
      >
        <legend
          className="legend-group"
          id="terra-radio-field-description-1"
        >
          <div
            className="legend"
          >
            Default RadioField
            <span
              className="error-icon-hidden"
            />
          </div>
        </legend>
      </fieldset>
    </RadioField>
  </InjectIntl(RadioField)>
</ThemeContextProvider>
`;

exports[`should display the required icon for fields with hideRequired, but have a state of invalid 1`] = `
<RadioField
  error={null}
  help={null}
  hideRequired={true}
  intl={
    Object {
      "defaultFormats": Object {},
      "defaultLocale": "en",
      "formatDate": [Function],
      "formatHTMLMessage": [Function],
      "formatMessage": [Function],
      "formatNumber": [Function],
      "formatPlural": [Function],
      "formatRelative": [Function],
      "formatTime": [Function],
      "formats": Object {},
      "formatters": Object {
        "getDateTimeFormat": [Function],
        "getMessageFormat": [Function],
        "getNumberFormat": [Function],
        "getPluralFormat": [Function],
        "getRelativeFormat": [Function],
      },
      "locale": "en",
      "messages": null,
      "now": [Function],
      "onError": [Function],
      "textComponent": "span",
      "timeZone": null,
    }
  }
  isInline={false}
  isInvalid={true}
  isLegendHidden={false}
  legend="Hidden Required CheckboxField"
  legendAttrs={Object {}}
  required={true}
  showOptional={false}
/>
`;

exports[`should hide the legend when requested 1`] = `
<RadioField
  error={null}
  help={null}
  hideRequired={false}
  intl={
    Object {
      "defaultFormats": Object {},
      "defaultLocale": "en",
      "formatDate": [Function],
      "formatHTMLMessage": [Function],
      "formatMessage": [Function],
      "formatNumber": [Function],
      "formatPlural": [Function],
      "formatRelative": [Function],
      "formatTime": [Function],
      "formats": Object {},
      "formatters": Object {
        "getDateTimeFormat": [Function],
        "getMessageFormat": [Function],
        "getNumberFormat": [Function],
        "getPluralFormat": [Function],
        "getRelativeFormat": [Function],
      },
      "locale": "en",
      "messages": null,
      "now": [Function],
      "onError": [Function],
      "textComponent": "span",
      "timeZone": null,
    }
  }
  isInline={false}
  isInvalid={false}
  isLegendHidden={true}
  legend="Hidden Legend legend"
  legendAttrs={
    Object {
      "class": "application-legend",
    }
  }
  required={false}
  showOptional={false}
/>
`;

exports[`should hide the required indicator when requested 1`] = `
<RadioField
  error={null}
  help={null}
  hideRequired={true}
  intl={
    Object {
      "defaultFormats": Object {},
      "defaultLocale": "en",
      "formatDate": [Function],
      "formatHTMLMessage": [Function],
      "formatMessage": [Function],
      "formatNumber": [Function],
      "formatPlural": [Function],
      "formatRelative": [Function],
      "formatTime": [Function],
      "formats": Object {},
      "formatters": Object {
        "getDateTimeFormat": [Function],
        "getMessageFormat": [Function],
        "getNumberFormat": [Function],
        "getPluralFormat": [Function],
        "getRelativeFormat": [Function],
      },
      "locale": "en",
      "messages": null,
      "now": [Function],
      "onError": [Function],
      "textComponent": "span",
      "timeZone": null,
    }
  }
  isInline={false}
  isInvalid={false}
  isLegendHidden={false}
  legend="Hidden Required RadioField"
  legendAttrs={Object {}}
  required={true}
  showOptional={false}
/>
`;

exports[`should render a default radio field 1`] = `
<RadioField
  error={null}
  help={null}
  hideRequired={false}
  intl={
    Object {
      "defaultFormats": Object {},
      "defaultLocale": "en",
      "formatDate": [Function],
      "formatHTMLMessage": [Function],
      "formatMessage": [Function],
      "formatNumber": [Function],
      "formatPlural": [Function],
      "formatRelative": [Function],
      "formatTime": [Function],
      "formats": Object {},
      "formatters": Object {
        "getDateTimeFormat": [Function],
        "getMessageFormat": [Function],
        "getNumberFormat": [Function],
        "getPluralFormat": [Function],
        "getRelativeFormat": [Function],
      },
      "locale": "en",
      "messages": null,
      "now": [Function],
      "onError": [Function],
      "textComponent": "span",
      "timeZone": null,
    }
  }
  isInline={false}
  isInvalid={false}
  isLegendHidden={false}
  legend="Default RadioField"
  legendAttrs={Object {}}
  required={false}
  showOptional={false}
/>
`;

exports[`should render a default radio field if it has an undefined child 1`] = `
<RadioField
  error={null}
  help={null}
  hideRequired={false}
  intl={
    Object {
      "defaultFormats": Object {},
      "defaultLocale": "en",
      "formatDate": [Function],
      "formatHTMLMessage": [Function],
      "formatMessage": [Function],
      "formatNumber": [Function],
      "formatPlural": [Function],
      "formatRelative": [Function],
      "formatTime": [Function],
      "formats": Object {},
      "formatters": Object {
        "getDateTimeFormat": [Function],
        "getMessageFormat": [Function],
        "getNumberFormat": [Function],
        "getPluralFormat": [Function],
        "getRelativeFormat": [Function],
      },
      "locale": "en",
      "messages": null,
      "now": [Function],
      "onError": [Function],
      "textComponent": "span",
      "timeZone": null,
    }
  }
  isInline={false}
  isInvalid={false}
  isLegendHidden={false}
  legend="Default RadioField"
  legendAttrs={Object {}}
  required={false}
  showOptional={false}
/>
`;

exports[`should render a help message 1`] = `
<RadioField
  error={null}
  help="This will help up determine how many chairs to request"
  hideRequired={false}
  intl={
    Object {
      "defaultFormats": Object {},
      "defaultLocale": "en",
      "formatDate": [Function],
      "formatHTMLMessage": [Function],
      "formatMessage": [Function],
      "formatNumber": [Function],
      "formatPlural": [Function],
      "formatRelative": [Function],
      "formatTime": [Function],
      "formats": Object {},
      "formatters": Object {
        "getDateTimeFormat": [Function],
        "getMessageFormat": [Function],
        "getNumberFormat": [Function],
        "getPluralFormat": [Function],
        "getRelativeFormat": [Function],
      },
      "locale": "en",
      "messages": null,
      "now": [Function],
      "onError": [Function],
      "textComponent": "span",
      "timeZone": null,
    }
  }
  isInline={false}
  isInvalid={false}
  isLegendHidden={false}
  legend="Help RadioField"
  legendAttrs={Object {}}
  required={false}
  showOptional={false}
/>
`;

exports[`should render an invalid radio field 1`] = `
<RadioField
  error="Test Error"
  help={null}
  hideRequired={false}
  intl={
    Object {
      "defaultFormats": Object {},
      "defaultLocale": "en",
      "formatDate": [Function],
      "formatHTMLMessage": [Function],
      "formatMessage": [Function],
      "formatNumber": [Function],
      "formatPlural": [Function],
      "formatRelative": [Function],
      "formatTime": [Function],
      "formats": Object {},
      "formatters": Object {
        "getDateTimeFormat": [Function],
        "getMessageFormat": [Function],
        "getNumberFormat": [Function],
        "getPluralFormat": [Function],
        "getRelativeFormat": [Function],
      },
      "locale": "en",
      "messages": null,
      "now": [Function],
      "onError": [Function],
      "textComponent": "span",
      "timeZone": null,
    }
  }
  isInline={false}
  isInvalid={true}
  isLegendHidden={false}
  legend="Invalid RadioField"
  legendAttrs={Object {}}
  required={false}
  showOptional={false}
/>
`;

exports[`should render an optional part on the label 1`] = `
<RadioField
  error={null}
  help={null}
  hideRequired={false}
  intl={
    Object {
      "defaultFormats": Object {},
      "defaultLocale": "en",
      "formatDate": [Function],
      "formatHTMLMessage": [Function],
      "formatMessage": [Function],
      "formatNumber": [Function],
      "formatPlural": [Function],
      "formatRelative": [Function],
      "formatTime": [Function],
      "formats": Object {},
      "formatters": Object {
        "getDateTimeFormat": [Function],
        "getMessageFormat": [Function],
        "getNumberFormat": [Function],
        "getPluralFormat": [Function],
        "getRelativeFormat": [Function],
      },
      "locale": "en",
      "messages": null,
      "now": [Function],
      "onError": [Function],
      "textComponent": "span",
      "timeZone": null,
    }
  }
  isInline={false}
  isInvalid={false}
  isLegendHidden={false}
  legend="Optional RadioField"
  legendAttrs={Object {}}
  required={false}
  showOptional={true}
/>
`;

exports[`should render required radio field 1`] = `
<RadioField
  error={null}
  help={null}
  hideRequired={false}
  intl={
    Object {
      "defaultFormats": Object {},
      "defaultLocale": "en",
      "formatDate": [Function],
      "formatHTMLMessage": [Function],
      "formatMessage": [Function],
      "formatNumber": [Function],
      "formatPlural": [Function],
      "formatRelative": [Function],
      "formatTime": [Function],
      "formats": Object {},
      "formatters": Object {
        "getDateTimeFormat": [Function],
        "getMessageFormat": [Function],
        "getNumberFormat": [Function],
        "getPluralFormat": [Function],
        "getRelativeFormat": [Function],
      },
      "locale": "en",
      "messages": null,
      "now": [Function],
      "onError": [Function],
      "textComponent": "span",
      "timeZone": null,
    }
  }
  isInline={false}
  isInvalid={false}
  isLegendHidden={false}
  legend="Required RadioField"
  legendAttrs={Object {}}
  required={true}
  showOptional={false}
/>
`;

exports[`should render the legend with custom attributes properly 1`] = `
<RadioField
  error={null}
  help={null}
  hideRequired={false}
  intl={
    Object {
      "defaultFormats": Object {},
      "defaultLocale": "en",
      "formatDate": [Function],
      "formatHTMLMessage": [Function],
      "formatMessage": [Function],
      "formatNumber": [Function],
      "formatPlural": [Function],
      "formatRelative": [Function],
      "formatTime": [Function],
      "formats": Object {},
      "formatters": Object {
        "getDateTimeFormat": [Function],
        "getMessageFormat": [Function],
        "getNumberFormat": [Function],
        "getPluralFormat": [Function],
        "getRelativeFormat": [Function],
      },
      "locale": "en",
      "messages": null,
      "now": [Function],
      "onError": [Function],
      "textComponent": "span",
      "timeZone": null,
    }
  }
  isInline={false}
  isInvalid={false}
  isLegendHidden={false}
  legend="Custom Legend RadioField"
  legendAttrs={
    Object {
      "class": "application-legend",
    }
  }
  required={false}
  showOptional={false}
/>
`;
